receipt search latee added and due report

--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -280,6 +280,11 @@
             <div class="col-md-12">
               <update-preapps></update-preapps>
             </div>
+          </section>   
+          <section data-category="process-report">
+            <div class="col-md-12">
+              <process-report></process-report>
+            </div>
           </section>       
           </iron-pages>
           </div>
