--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -261,3 +261,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="defaulter-update/defaulter-update.html">
 <link rel="import" href="defaulter-update-itemcard/defaulter-update-itemcard.html">
 <link rel="import" href="enquirylik-card/enquirylik-card.html">
+<link rel="import" href="process-report/process-report.html">
+<link rel="import" href="duereport-service/duereport-service.html">
