--- a/app/elements/schedule-service/schedule-service.html
+++ b/app/elements/schedule-service/schedule-service.html
@@ -443,6 +443,7 @@
         document.querySelector('notpaid-report').FnSetArray(gradearr);
         document.querySelector('neevcollection-report').gradearr=gradearr;
         document.querySelector('dailycollection-dashboard').gradearr=gradearr;
+        document.querySelector('process-report').gradearr=gradearr;
       },
       fetchgradeService:function(){       
         this.fetchgradeurl=sessionStorage.getItem("addrinfo")+"/fetchgrade-service"
@@ -482,6 +483,7 @@
         document.querySelector('notpaid-report').academicarr=e.detail.response.returnval;
         document.querySelector('detailed-feedue-report').academicarr=e.detail.response.returnval;
         document.querySelector('dailycollection-dashboard').academicarr=e.detail.response.returnval;
+        document.querySelector('process-report').academicarr=e.detail.response.returnval;
       },
       fetchadmissionyearService:function(){        
         this.fetchadmissionyearurl=sessionStorage.getItem("addrinfo")+"/fetchadmissionyear-service"
