--- a/app/elements/processing-service/processing-service.html
+++ b/app/elements/processing-service/processing-service.html
@@ -1305,13 +1305,14 @@
         document.querySelector('adhoc-discount').FnRefresh();
         document.querySelector('adhoc-discount-itemcard').FnRefresh();
       },
-      updatelatefeeService:function(admissionno,amount,reason){
+      updatelatefeeService:function(admissionno,amount,reason,installment){
         this.updatelatefeeurl=sessionStorage.getItem("addrinfo")+"/updatelatefee-service";
         var obj={"schoolid":""};
         obj.schoolid=localStorage.getItem("schoolid");
         obj.admissionno=admissionno;
         obj.amount=amount;
         obj.reason=reason;
+        obj.installment=installment;
         var d=new Date();
         var currdate=(d.getMonth()+1)+"/"+d.getDate()+"/"+d.getFullYear();
         obj.latefeedate=currdate;
